[metadata]
name = 'dateandtimeparser'
version = '0.0.1'
description = 'date and time parsing library.'
author = 'glib.ai'
author_email = 'samith@glib.ai'
license = 'MIT'
url = 'https://github.com/GlibAi/dateandtimeparser'

[requires]
python_version = ['3.6']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
